--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext{
+        kotlin_version = '1.3.61'
+        navigationVersion = '1.0.0-rc02'
+    }
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
